objects/MasterModuleInverterJunction__c.object
<CustomObject>
    <description>Junction between master and Module/Inverter. This will be associated with the master configuration and module via junction objects.  We should only populate one type of module per master record. 
This is being used in Cash ordering and Lease/Loan.
Release WW 22 - 2016</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter__c</fullName>
        <formula>ModuleInverterJunction__r.Inverter_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Master Configuration of the group
Release WW22 - 2016</description>
        <label>Master Configurator</label>
        <referenceTo>Master_Configurator__c</referenceTo>
        <relationshipLabel>MasterModuleInverterJunctions</relationshipLabel>
        <relationshipName>MasterModuleInverterJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModuleInverterJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Module-Inverter combo
Release WW22 - 2016</description>
        <label>ModuleInverterJunction</label>
        <referenceTo>ModuleInverterJunction__c</referenceTo>
        <relationshipLabel>MasterModuleInverterJunctions</relationshipLabel>
        <relationshipName>MasterModuleInverterJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <formula>ModuleInverterJunction__r.Module_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields>
    <label>MasterModuleInverterJunction</label>
    <nameField>
        <displayFormat>MMIJ-{00000}</displayFormat>
        <label>MasterModuleInverterJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasterModuleInverterJunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>